refactor interface OOP, a di đà phật